--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -9,12 +9,12 @@
     <view class='empty'></view>
     <view class='indexOptons'>
         <view class='indexOptonsChild' wx:for='{{pageData.home_icon}}'>
-            <view class='indexOptionsTop'><image src='{{item.icon}}' mode='scaleToFill'></image></view>
+            <view class='indexOptionsTop' data-url='{{item.url}}' bindtap='toContentPage'><image src='{{item.icon}}' mode='scaleToFill'></image></view>
             <view class='indexOptionsBottom'>{{item.name}}</view>
         </view>
         <view class='indexOptonsChild' bindtap='nav'>
             <view class='indexOptionsTop'><image  mode='scaleToFill'></image></view>
-            <view class='indexOptionsBottom'>更多</view>
+            <!-- <view class='indexOptionsBottom'>更多</view> -->
         </view>
     </view>
     <view class='indexCourses'>
