--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,4 @@
+<import src='../../templates/indexModel/indexModel' />
 <view class='indexBanner'>
     <swiper indicator-dots circular>
         <swiper-item wx:for='{{pageData.banner}}'>
@@ -5,7 +6,8 @@
         </swiper-item>
     </swiper>
 </view>
-<view class='indexBackground'>
+
+<!-- <view class='indexBackground'>
     <view class='empty'></view>
     <view class='indexOptons'>
         <view class='indexOptonsChild' wx:for='{{pageData.home_icon}}'>
@@ -14,9 +16,10 @@
         </view>
         <view class='indexOptonsChild' bindtap='nav'>
             <view class='indexOptionsTop'><image  mode='scaleToFill'></image></view>
-            <!-- <view class='indexOptionsBottom'>更多</view> -->
+             <view class='indexOptionsBottom'>更多</view> 
         </view>
     </view>
+     课程推荐 
     <view class='indexCourses'>
         <view class='indexCoursesTitle'>课程推荐</view>
         <view class='indexCoursesContent' wx:for='{{pageData.course}}'>
@@ -29,7 +32,10 @@
             </view>
         </view>
     </view>
-</view>
+</view> -->
+
+<template is='three' data='{{item:paintData}}'></template>
+
 <view class='getUserInfoWrap' hidden='{{isGetUser}}'>
     <view class='getUserInfoContent'>
         <button open-type='getUserInfo' bindgetuserinfo='getUserInfo'>确认</button>
