--- a/pages/actReg/actRegUserInfo/actRegUserInfo.wxml
+++ b/pages/actReg/actRegUserInfo/actRegUserInfo.wxml
@@ -1,19 +1,19 @@
-<view class='actRegUserWrap' hidden='{{!isShow}}'>
+<view class='actRegUserWrap' hidden='{{!isShow}}' wx:for='{{pageData}}' >
     <view class='actRegTop'>
         <view class='actRegTopLeft'>
             <text class='iconfont icon-ionc--' style='color:#47BAFD;'></text>
-            瞎弄了
+            {{item.nickname}}
         </view>
         <view class='actRegTopRight'>
-            2018-06-26 12:59
+            {{item.create_time}}
         </view>
     </view>
     <view class='actRegBottom'>
-        <view class='actRegTopLeft' style='color:#47BAFD;' data-phonenum='13065465464' bindtap='makePhone'>
+        <view class='actRegTopLeft' style='color:#47BAFD;' data-phonenum='{{item.phone}}' bindtap='makePhone'>
             <text class='iconfont icon-phone' ></text>
-            13056465616
+            {{item.phone}}
         </view>
-        <view class='actRegTopRight' bindtap='isShowInfo' data-num='0'>
+        <view class='actRegTopRight' bindtap='isShowInfo' data-userdata='{{item}}' data-num='0'>
             <text>...</text>
         </view>
     </view>
@@ -22,15 +22,15 @@
     <view class='empty'></view>
     <view class='userInfoContet'>
         <view class='userInfoContetLeft'>真实姓名:</view>
-        <view class='userInfoContetRight'>瞎弄了</view>
+        <view class='userInfoContetRight'>{{userInfo.nickname}}</view>
     </view>
     <view class='userInfoContet'>
         <view class='userInfoContetLeft'>手机号码:</view>
-        <view class='userInfoContetRight' data-phonenum='13065465464' bindtap='makePhone'>13065465464</view>
+        <view class='userInfoContetRight' data-phonenum='{{userInfo.phone}}' bindtap='makePhone'>{{userInfo.phone}}</view>
     </view>
     <view class='userInfoContet'>
         <view class='userInfoContetLeft'>报名时间:</view>
-        <view class='userInfoContetRight'>2018-03-04 20:21</view>
+        <view class='userInfoContetRight'>{{userInfo.create_time}}</view>
     </view>
     <button class='userInfoBtn' bindtap='isShowInfo' data-num='-1'>返回</button>
 </view>
