--- a/pages/courses/course/course.wxml
+++ b/pages/courses/course/course.wxml
@@ -1,7 +1,7 @@
 <view class='courseWrap'>
     <view class='empty'></view>
     <swiper indicator-dots='true' indicator-active-color='#FFCE0B'>
-        <swiper-item wx:for='{{courseData.hot_lesson}}' bindtap='toCourseInfo'>
+        <swiper-item wx:for='{{courseData.hot_lesson}}' bindtap='toCourseInfo' data-id='{{item.id}}'>
             <view class='courseTop'>
                 <view class='courseTopImg'>
                     <image src='{{item.cover.url}}' mode='scaleToFill' />
@@ -13,7 +13,7 @@
         </swiper-item>
     </swiper>
     <view class='courseSelect' bindtap='toCourseClass'>{{lessonClassName}}></view>
-    <view class='courseInfo' wx:for='{{lessonData?lessonData:courseData.lesson}}' bindtap='toCourseInfo' data-lessonInfo='{{item}}'>
+    <view class='courseInfo' wx:for='{{lessonData?lessonData:courseData.lesson}}' data-id='{{item.id}}' bindtap='toCourseInfo' data-lessonInfo='{{item}}' data-id='{{item.id}}'>
         <view class='courseInfoImg'>
             <image src='{{item.cover.url}}' mode='aspectFit'></image>
         </view>
