--- a/pages/killPrices/killPriceInfo/killPriceInfo.wxss
+++ b/pages/killPrices/killPriceInfo/killPriceInfo.wxss
@@ -2,9 +2,7 @@
 .killPriceInfoWrap{
     width:750rpx;
     min-height:1207rpx;
-    background:#F9C000;
-    background-size:100% 100%;
-    background-repeat:repeat-y;
+    background-repeat:repeat;
 }
 
 .killPriceBanner{
@@ -20,9 +18,10 @@
 
 .killPriceInfoOne{
     width:670rpx;
-    height:905rpx;
+    min-height:485rpx;
     border-radius:5px 5px 0px 0px;
     margin:0rpx auto 0rpx;
+    background:#fff;
 }
 
 .killPriceInfoTop{
@@ -55,7 +54,7 @@
 .killPriceInfoImg{
     width:670rpx;
     height:390rpx;
-    background:#fff;
+    background:transparent;
     overflow:hidden;
     box-shadow:0px 2px 2px 2px #E2E6ED;
 }
@@ -64,7 +63,7 @@
     height:350rpx;
     margin-top:20rpx;
     margin-left:35rpx;
-    background:#0f0;
+    background:#fff;
 }
 
 .killPriceInfoRange{
@@ -133,6 +132,7 @@
 .killPriceInfoBottom{
     width:100%;
     height:32rpx;
+    background:transparent;
 }
 
 .killPriceInfoBottom view{
@@ -148,26 +148,24 @@
     margin-right:60rpx;
 }
 
-
-
 /*第二部分  */
 .killPriceInfoTwo{
     width:670rpx;
-    min-height:990rpx;
+    min-height:630rpx;
     margin:-2rpx auto;
     border-radius:5rpx;
 }
 
 .killPriceInfoTwoTop{
     width:670rpx;
-    height:960rpx;
+    min-height:960rpx;
     box-shadow:0px 2px 2px 2px #E2E6ED;
     border-radius:5rpx;
 }
 
 .infoTwoTitle{
    width:670rpx;
-    height:80rpx;
+    min-height:80rpx;
     background:#fff;
     border-radius:5px 5px 0px 0px;
     border-bottom:1rpx solid #efefef;
@@ -185,7 +183,7 @@
 
 .infoTwoInfo{
     width:100%;
-    height:310rpx;
+    min-height:310rpx;
     background:#fff;
     overflow:hidden;
     border-bottom:1rpx solid #efefef;
