--- a/pages/morePage/morePage.wxss
+++ b/pages/morePage/morePage.wxss
@@ -23,8 +23,9 @@
 }
 .morePageWrapTop{
     width:100rpx;
-    line-height:95rpx;
-    border-radius:100%;
+    line-height:100rpx;
+    height:100rpx;
+    border-radius:50%;
     background:#1055CC;
     margin:35rpx auto 0rpx;
 }
