--- a/templates/indexModel/indexModel.wxml
+++ b/templates/indexModel/indexModel.wxml
@@ -4,11 +4,11 @@
         <view class='empty'></view>
         <!-- 导航 -->
         <view class='indexOptons'>
-            <view class='indexOptonsChild'>
+            <view class='indexOptonsChild' wx:for='{{home}}' data-url='{{item.url}}' bindtap='nav'>
                 <view class='indexOptionsTop'>
-                    <image mode='scaleToFill'></image>
+                    <image src='{{item.icon}}' mode='scaleToFill'></image>
                 </view>
-                <view class='indexOptionsBottom'></view>
+                <view class='indexOptionsBottom'>{{item.name}}</view>
             </view>
             <view class='indexOptonsChild' bindtap='nav'>
                 <view class='indexOptionsTop'>
@@ -20,15 +20,15 @@
         <!-- 课程推荐 -->
         <view class='indexCourses'>
             <view class='indexCoursesTitle'>课程推荐</view>
-            <view class='indexCoursesContent'>
+            <view class='indexCoursesContent' wx:for='{{lessons}}' bindtap='toCourseInfo' data-id='{{item.id}}'>
                 <view class='leftImage'>
-                    <image mode='scaleToFill'></image>
+                    <image src='{{item.cover.url}}' mode='scaleToFill'></image>
                 </view>
                 <view class='rightText'>
-                    <view class='rightTextTitle'></view>
+                    <view class='rightTextTitle'>{{item.title}}</view>
                     <view class='rightTextPrice'>
-                        <text decode>￥199&nbsp;</text>
-                        <text decode>￥200</text>
+                        <text decode>￥{{item.now_price}}&nbsp;</text>
+                        <text decode>￥{{item.original_price}}</text>
                     </view>
                 </view>
             </view>
@@ -99,5 +99,25 @@
 </template>
 <!-- 课外活动/初高中 -->
 <template name='five'>
-
+    <view class='fiveWrap'>
+        <view class='fiveNav'>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+            <view class='fiveNavChild'></view>
+        </view>
+        <view class='twoTitle'>课程推荐</view>
+        <view class='fiveLessonContent'>
+            <view class='fiveLessonContentImage'><image mode='scaleToFill'></image></view>
+            <view class='fiveLessonContentTitle'>
+                <view class='lessonContentTitleText'>智慧招生-暑假招生</view>
+                <view class='lessonContent'>2018年培训行业--智慧招生小程序方案</view>
+            </view>
+            <view class='fiveLessonContentIcon'></view>
+        </view>
+    </view>
 </template>
