--- a/templates/indexModel/indexModel.wxss
+++ b/templates/indexModel/indexModel.wxss
@@ -24,7 +24,6 @@
     width:100rpx;
     height:100rpx;
     margin:20rpx auto 0rpx;
-    background:#0ff;
 }
 .indexOptionsTop image{
     width:100rpx;
@@ -135,7 +134,7 @@
     margin-top:10rpx;
 }
 .twoTitle{
-    width:750rpx;
+    width:100%;
     height:100rpx;
     line-height:100rpx;
     text-align:center;
@@ -261,4 +260,76 @@
     height:40rpx;
     font-size:30rpx;
     text-align:center;
+}
+/* 课外活动/快乐Two */
+.fiveWrap{
+    width:750rpx;
+    min-height:680rpx;
+    background:#FFF5F4;
+    margin:20rpx auto 0rpx;
+    padding-bottom:20rpx;
+}
+.fiveNav{
+    width:680rpx;
+    height:410rpx;
+    background:#efefef;
+    margin:0rpx auto;
+}
+.fiveNavChild{
+    width:160rpx;
+    height:200rpx;
+    background:lightgreen;
+    float:left;
+    margin-left:13.33rpx;
+}
+view.fiveNavChild:nth-child(1),view.fiveNavChild:nth-child(5){
+    margin-left:0rpx;
+}
+view.fiveNavChild:nth-child(6),view.fiveNavChild:nth-child(5),view.fiveNavChild:nth-child(7),view.fiveNavChild:nth-child(8){
+    margin-top:10rpx;
+}
+.fiveLessonContent{
+    width:680rpx;
+    height:210rpx;
+    background:#fff;
+    margin:0rpx auto 30rpx;
+}
+.fiveLessonContentImage{
+    width:210rpx;
+    height:160rpx;
+    float:left;
+    margin-left:20rpx;
+    margin-top:25rpx;
+}
+.fiveLessonContentTitle{
+    width:300rpx;
+    height:160rpx;
+    margin-left:20rpx;
+    margin-top:25rpx;
+    float:left;
+}
+.fiveLessonContentIcon{
+    width:110rpx;
+    height:110rpx;
+    float:left;
+    margin-left:20rpx;
+    margin-top:70rpx;
+}
+.fiveLessonContentIcon image{
+    width:110rpx;
+    height:110rpx;
+}
+.lessonContentTitleText{
+    width:300rpx;
+    line-height:30rpx;
+    font-size:30rpx;
+    font-weight:bold;
+    text-indent:10rpx;
+    border-left:3px solid #F82335;
+}
+.lessonContent{
+    width:300rpx;
+    font-size:26rpx;
+    color:#7b7b7b;
+    margin-top:10rpx;
 }
