--- a/pages/manageCenters/chooseModel/chooseModel.wxss
+++ b/pages/manageCenters/chooseModel/chooseModel.wxss
@@ -2,6 +2,7 @@
     width:750rpx;
     min-height:1207rpx;
     background:#fff;
+    margin-bottom: 20rpx;
 }
 .chooseModeClass{
     width:750rpx;
