--- a/pages/morePage/morePage.wxss
+++ b/pages/morePage/morePage.wxss
@@ -10,8 +10,10 @@
     float:left;
     width:240rpx;
     height:240rpx;
+    border-left:1rpx solid #efefef;
     border-right:1rpx solid #efefef;
     border-bottom:1rpx solid #efefef;
+    margin-left:-1rpx;
 }
 .iconfontStyle{
     font-size:70rpx;
