视频投票功能大部分结束

--- a/pages/videoClass/videoClassInfo/videoClassInfo.wxml
+++ b/pages/videoClass/videoClassInfo/videoClassInfo.wxml
@@ -13,20 +13,27 @@
 </view>
 <view class='infoClassesInput'>
     <form bindsubmit='addComment'>
-        <textarea name='content'></textarea>
+        <textarea name='content' value='{{content}}'></textarea>
         <button form-type='submit'>提交</button>
     </form>
 </view>
 <view class='infoClassesConnect'>
     <view class='classesConnectInfo'>全部评论(长按删除,点按回复)</view>
-    <view class='classesConnectContent' wx:for='{{commentData}}' bindlongtap='longDel'>
+    <view class='classesConnectContent' wx:for='{{commentData}}' wx:key='{{item.id}}' bindlongpress='longDel' data-id='{{item.id}}' bindtap='switchRely' data-name='{{item.nickname?item.nickname:"访客"}}'>
         <view class='contentTop'><image src='{{item.avatar_url}}'></image></view>
         <view class='contentBottom'>
             <view class='title'>
-                <text>{{item.nickname}}</text>
+                <text>{{item.nickname?item.nickname:'访客'}}</text>
                 <text>{{item.create_time}}</text>
             </view>
             <view class='content'>{{item.content}}</view>
+        </view>
+        <view class='contentRely' wx:for='{{item.reply}}'>
+            <view class='contentRelyLeft'>
+                <image src='{{item.avatar_url}}'></image>
+                <view>{{item.nickname?item.nickname:'访客'}} :</view>
+            </view>
+            <view class='contentRelyRight'>{{item.content}}</view>
         </view>
     </view>
 </view>
