--- a/pages/videoClass/videoClassUserList/videoClassUserList.wxss
+++ b/pages/videoClass/videoClassUserList/videoClassUserList.wxss
@@ -11,8 +11,9 @@
 /* 功能 */
 .videoClassOptions{
     width:710rpx;
-    height:200rpx;
+    height:180rpx;
     margin:10rpx auto 10rpx;
+    border-bottom:1rpx solid #efefef;
 }
 .optionsContent{
     width:142rpx;
@@ -25,7 +26,7 @@
     height:180rpx;
     padding:0rpx;
     position:relative;
-    background:#fff;
+    background:transparent;
 }
 .iconStyleBtn{
     font-size:55rpx;
@@ -120,4 +121,18 @@ view.videoClassContent:nth-child(even){
     font-weight:bold;
     line-height:72rpx;
     text-align:center;
+}
+/* 分类 */
+.catalogClass{
+    width:710rpx;
+    min-height:50rpx;
+    font-size:24rpx;
+    margin:10rpx auto 10rpx;
+    border-bottom:1rpx solid #efefef;
+}
+.catalogClass view{
+    height:50rpx;
+    display:inline-block;
+    line-height:50rpx;
+    padding:0rpx 8rpx;
 }
