--- a/pages/videoVote/videoVoteStuList/videoVoteStuList.wxss
+++ b/pages/videoVote/videoVoteStuList/videoVoteStuList.wxss
@@ -2,22 +2,22 @@ page{
     background:#F4F4F4;
 }
 .voteUserWrap{
-    width:730rpx;
+    width:710rpx;
     height:410rpx;
-    margin-left:20rpx;  
-    border-radius:10px 0px 0px 0px;
+    margin:0rpx auto 20rpx;
+    border-radius:10px 10px 0px 0px;
     background:#fff;
     overflow:hidden;
 }
 .voteUserContent{
-    width:730rpx;
+    width:710rpx;
     height:330rpx;
     background:#fff;
     position:relative;
     overflow:hidden;
 }
 .voteUserContent image{
-    width:730rpx;
+    width:710rpx;
     height:330rpx;
 }
 .contentLeft{
@@ -44,7 +44,7 @@ page{
     padding:0rpx 8rpx;
 }
 .contentbottom{
-    width:730rpx;
+    width:710rpx;
     height:60rpx;
     line-height:60rpx;
     background:rgba(0,0,0,0.3);
@@ -65,4 +65,19 @@ page{
 }
 view.voteUserWrap:nth-child(1){
     margin-top:20rpx;
+}
+.empty{
+    width:100%;
+    height:20rpx;
+    background:transparent;
+}
+
+.noData{
+    width:100%;
+    height:60rpx;
+    font-size:26rpx;
+    color:#7b7b7b;
+    text-align:center;
+    line-height:60rpx;
+    background:transparent;
 }
