--- a/pages/videoVote/videoVoteInfo/videoVoteInfo.wxss
+++ b/pages/videoVote/videoVoteInfo/videoVoteInfo.wxss
@@ -45,8 +45,17 @@ view.voteInfoStatusChild:nth-child(3){
     height:90rpx;
     margin:0rpx auto 20rpx;
 }
-.voteInfoInput input{
-    width:550rpx;
+.infoInputWrap{
+    width:380rpx;
+    height:70rpx;
+    float:left;
+    font-size:28rpx;
+}
+view.widthInput{
+    width:550rpx !important;
+}
+.infoInputWrap input{
+    width:100%;
     height:70rpx;
     font-size:28rpx;
     text-align:center;
@@ -65,6 +74,7 @@ view.voteInfoStatusChild:nth-child(3){
     font-size:26rpx;
     color:#fff;
     line-height:78rpx;
+    margin-right:10rpx;
 }
 .voteInfoOptions view{
     width:168.75rpx;
