--- a/pages/videoVote/videoVoteSignup/videoVoteSignup.wxml
+++ b/pages/videoVote/videoVoteSignup/videoVoteSignup.wxml
@@ -73,11 +73,11 @@
         <button>了解机构 ></button>
     </view>
     <!-- 活动分享 -->
-    <view class='activeInfoShare'>
+    <!-- <view class='activeInfoShare'>
         <view class='activeInfoInfoTitle'>活动分享</view>
         <view class='activeInfoShareImage'><image mode='scaleToFill'></image></view>
         <button>分享到朋友圈</button>
-    </view>
+    </view> -->
     <!-- 活动详情 -->
     <view class='activeInfoImages' hidden='{{isTitleOne}}'>
         <view class='activeInfoInfoTitle'>{{pageData.title1}}</view>
